--- a/.github/workflows/my_website.yml
+++ b/.github/workflows/my_website.yml
@@ -28,7 +28,7 @@ jobs:
         node-version: 12  
 
     # Runs a set of commands using the runners shell
-    - name: deploy uding surges
+    - name: deploy using surges
       run: surge ./ nasir_455.surge.sh --token $ {{secrets.secret_token}}
         echo Add other actions to build,
         echo test, and deploy your project.
