--- a/.github/workflows/my_website.yml
+++ b/.github/workflows/my_website.yml
@@ -29,6 +29,6 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: deploy using surges
-      run: surge ./ nasir_455.surge.sh --token $ {{secrets.secret_token}}
+      run: surge ./ nasir_455.surge.sh --token $ {{secrets.SECRET_TOKEN}}
         echo Add other actions to build,
         echo test, and deploy your project.
