--- a/.github/workflows/my_website.yml
+++ b/.github/workflows/my_website.yml
@@ -28,6 +28,8 @@ jobs:
         node-version: 12  
 
     # Runs a set of commands using the runners shell
+    -name: installing surge
+     run: npm install --global surge
     - name: deploy using surges
       run: surge ./ nasir_455.surge.sh --token $ {{secrets.SECRET_TOKEN}}
         echo Add other actions to build,
