--- a/.github/workflows/my_website.yml
+++ b/.github/workflows/my_website.yml
@@ -29,8 +29,8 @@ jobs:
 
     # Runs a set of commands using the runners shell
     -name: installing surge
-     run: npm install --global surge
+    run: npm install --global surge
     - name: deploy using surges
-      run: surge ./ nasir_455.surge.sh --token $ {{secrets.SECRET_TOKEN}}
+      run: surge ./ nasir_455.surge.sh --token $ {{secrets.secret_token}}
         echo Add other actions to build,
         echo test, and deploy your project.
