--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
     - name: installing surge
       run: npm install --global surge
     - name: deploying using surge
-      run: surge ./ nasir_455.surge.sh --token ${{secret.secret_token}}
+      run: surge ./ nasir_455.surge.sh --token ${{secrets.secret_token}}
         echo Add other actions to build,
         echo test, and deploy your project.
