--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Bootcamp2020
+name: Deploy Surge Website
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
     branches: [ master ]
- 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,13 +21,14 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: instlling node module
-      run: actions/setup-node@v2-beta
+    - name: Install Node Js
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: 12
 
     # Runs a set of commands using the runners shell
     - name: installing surge
       run: npm install --global surge
     - name: deploying using surge
       run: surge ./ nasir_455.surge.sh --token ${{secrets.secret_token}}
-        echo Add other actions to build,
-        echo test, and deploy your project.
+       
