--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
     - name: installing surge
       run: npm install --global surge
     - name: deploying using surge
-      run: surge ./ nasir_455.surge.sh --token ${{secrets.secret_token}}
+      run: surge ./ nasir_455.surge.sh --token ${{secrets.SURGE_TOKEN}}
        
